TestCases/Errors/Haversine/observations/sst/aut_01_obs.spm
obs r16-c5 0.00160881638559674
obs r17-c5 0.00123955047700593
obs r18-c5 0.00108754989934832
obs r16-c6 0.00454266045320856
obs r17-c6 0.00108302868364397
obs r18-c6 0.000947879469780163
obs r19-c6 0.00218818380743982
obs r20-c6 1e-08
obs r16-c7 0.00468190503194113
obs r17-c7 1e-08
obs r20-c7 1e-08
obs r19-c11 1e-08
obs r18-c13 1e-08
obs r19-c13 1e-08
obs r18-c14 1e-08
obs r19-c14 1e-08
obs r18-c15 1e-08
obs r19-c15 1e-08
obs r8-c18 0.00162393162393162
obs r9-c18 0.000909090909090909
obs r12-c18 0.0264395424836601
obs r8-c19 0.00333333333333333
obs r9-c19 0.00302380952380952
obs r10-c19 0.0145633074935401
obs r11-c19 0.0236440045452791
obs r12-c19 0.01
obs r10-c20 0.0327485004723137
obs r11-c20 0.0473187598626195
obs r10-c22 0.0846666666666667
obs r12-c22 0.0355
obs r10-c23 0.0453137254901961
error_value r16-c5 0.2
error_value r17-c5 0.2
error_value r18-c5 0.2
error_value r16-c6 0.2
error_value r17-c6 0.2
error_value r18-c6 0.2
error_value r19-c6 0.2
error_value r20-c6 0.2
error_value r16-c7 0.2
error_value r17-c7 0.2
error_value r20-c7 0.2
error_value r19-c11 0.2
error_value r18-c13 0.2
error_value r19-c13 0.2
error_value r18-c14 0.2
error_value r19-c14 0.2
error_value r18-c15 0.2
error_value r19-c15 0.2
error_value r8-c18 0.2
error_value r9-c18 0.2
error_value r12-c18 0.2
error_value r8-c19 0.2
error_value r9-c19 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r12-c19 0.2
error_value r10-c20 0.2
error_value r11-c20 0.2
error_value r10-c22 0.2
error_value r12-c22 0.2
error_value r10-c23 0.2
